# sparho

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .zenodo.json  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASE.md  ROADMAP.md  SECURITY.md  codecov.yml  pyproject.toml  requirements-bench.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml  perf.yml  release.yml
benchmarks/: README.md  lasso_libsvm.py  render_tables.py  spike_cg_stability.py  spike_warmstart.py
crates/sparho-core/: Cargo.toml
crates/sparho-core/src/: bcd.rs  csc.rs  kernels.rs  lib.rs  prox.rs  residual.rs
crates/sparho-core/tests/: proptests.proptest-regressions  proptests.rs
crates/sparho-py/: Cargo.toml
crates/sparho-py/src/: lib.rs
docs/: concepts.md  conf.py  feature_research.md  index.md  installation.md  migration_from_sparse_ho.md  protocols.md  quickstart.md  refs.bib  reproducibility.md  stability.md
docs/api/: criteria.rst  hypergrad.rst  index.md  problem.rst  search.rst  solvers.rst  state.rst  types.rst  wrappers.rst
docs/examples/: README.txt  plot_compare_hypergrad.py  plot_cv_lasso.py  plot_group_lasso.py  plot_held_out_lasso.py  plot_migration_from_sparse_ho.py  plot_sparse_logreg.py  plot_sure_lasso.py  plot_weighted_lasso.py
docs/how-to/: standardization-and-leakage.md
docs/theory/: active_set.md  convergence.md  criteria.md  implicit_diff.md  index.md  penalties.md  references.md
python/sparho/: __init__.py  _core.pyi  _linalg.py  criteria.py  hypergrad.py  problem.py  search.py  solver.py  state.py  testing.py  wrappers.py
python/sparho/adapters/: __init__.py  _common.py  callable.py  celer.py  group_lasso.py  native_bcd.py  sklearn.py
python/sparho/core/: __init__.py  types.py
python/sparho/hypergrad/: __init__.py  _bcd.py  _shared.py  backward.py  forward.py  implicit.py  implicit_forward.py  warm_start.py
tests/: conftest.py  test_adapters.py  test_algo_family.py  test_criteria.py  test_degenerate.py  test_determinism.py  test_determinism_matrix.py  test_ffi_safety.py  test_golden.py  test_group_lasso.py  test_hoag.py  test_hoag_schedule.py  test_hypergrad.py  test_kernels.py  test_kkt_residual.py  test_observability.py  test_problem.py  test_problem_validation.py  test_property_criteria.py  test_property_hypergrad.py  test_property_problem.py  test_search.py  test_smoke.py  test_state.py  test_warmstart.py  test_wrappers.py  test_wrappers_pickle.py
tests/fixtures/: datasets.py  libsvm_manifest.json
tests/golden/: elastic_net_small.json  generate.py  group_lasso_small.json  lasso_small.json  logreg_small.json  weighted_lasso_small.json
