[workspace]
members = ["crates/sparho-core", "crates/sparho-py"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"
authors = ["David Villacis <david@villacis.net>"]
repository = "https://github.com/dvillacis/sparho"
rust-version = "1.75"

[workspace.dependencies]
ndarray = "0.16"
num-traits = "0.2"
thiserror = "1"

[profile.release]
lto = "thin"
codegen-units = 1
debug = "line-tables-only"
