[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "sparho"
version = "0.2.0"
description = "Nonsmooth bilevel hyperparameter optimization via implicit differentiation"
readme = "README.md"
license = { text = "BSD-3-Clause" }
authors = [{ name = "David Villacis", email = "david@villacis.net" }]
requires-python = ">=3.11"
keywords = [
    "hyperparameter-optimization",
    "bilevel-optimization",
    "implicit-differentiation",
    "sparse-regression",
    "lasso",
    "elastic-net",
    "group-lasso",
    "sparse-logistic-regression",
    "sure",
    "hoag",
    "scikit-learn",
    "rust",
    "pyo3",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
celer = ["celer>=0.7"]
dev = [
    "pytest>=7",
    "pytest-cov",
    "hypothesis>=6",
    "maturin>=1.5",
    "ruff",
    "mypy",
    "pre-commit",
    # pandas is required by tests/test_wrappers.py (DataFrame round-trip
    # coverage on the sklearn-compatible wrappers). It is also in the
    # `bench` extra; declared here so `uv sync --extra dev` is a complete
    # test environment.
    "pandas>=2.1",
]
docs = [
    "sphinx>=7.4",
    "furo>=2024.5",
    "sphinx-gallery>=0.16",
    "matplotlib>=3.8",
    "numpydoc>=1.7",
    "myst-parser>=4",
    "sphinxcontrib-bibtex>=2.6",
]
bench = [
    "libsvmdata>=0.4",
    "pandas>=2.1",
    "matplotlib>=3.8",
    # sparse-ho is not on PyPI; benchmark scripts assume the user has installed
    # it from `pip install git+https://github.com/QB3/sparse-ho.git` (or a fork)
    # in the same env.
]

[project.urls]
Homepage = "https://github.com/dvillacis/sparho"
Repository = "https://github.com/dvillacis/sparho"
Documentation = "https://sparho.readthedocs.io"
Issues = "https://github.com/dvillacis/sparho/issues"
Changelog = "https://github.com/dvillacis/sparho/blob/main/CHANGELOG.md"
"Release Notes" = "https://github.com/dvillacis/sparho/releases"
"Code of Conduct" = "https://github.com/dvillacis/sparho/blob/main/CODE_OF_CONDUCT.md"
"Security Policy" = "https://github.com/dvillacis/sparho/blob/main/SECURITY.md"

[tool.maturin]
manifest-path = "crates/sparho-py/Cargo.toml"
module-name = "sparho._core"
python-source = "python"
features = ["pyo3/extension-module"]
include = ["LICENSE"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "D"]
ignore = ["D100", "D104", "D107"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]
"benchmarks/**" = ["D"]
# sphinx-gallery examples use the title + ``===`` underline convention as
# the module docstring; that intentionally violates D205 / D400 (no blank
# line after summary, no terminal period). Drop pydocstyle entirely here —
# the examples are demo code, not API.
"docs/examples/**" = ["D"]
# Adapter / solver / optimizer / criterion classes carry their semantics on
# the class docstring; the `__call__` / `init` / `value` / `value_and_hypergrad`
# dispatchers are self-evident from the class doc.
"python/sparho/adapters/*.py" = ["D102"]
"python/sparho/solver.py" = ["D102"]
"python/sparho/optimizer.py" = ["D102"]
"python/sparho/criteria.py" = ["D102"]
"python/sparho/wrappers.py" = ["D102", "D105"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "bench: marks tests that are benchmark-adjacent",
]
filterwarnings = [
    # sklearn 1.8+ deprecates `penalty=` on LogisticRegression in favor of
    # `l1_ratio=`. The old kwarg still works; migrate when the minimum
    # supported sklearn is bumped to 1.8+. Both messages contain a literal
    # ":" which collides with pytest's filterwarnings field separator, so
    # we suppress by category + emitting module instead.
    "ignore::FutureWarning:sklearn.linear_model._logistic",
    "ignore::UserWarning:sklearn.linear_model._logistic",
]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["python/sparho"]

[[tool.mypy.overrides]]
module = ["sklearn.*", "scipy.*", "celer.*", "libsvmdata.*", "threadpoolctl.*"]
ignore_missing_imports = true
